# ocean_model_grid_generator

./: .gitignore  .gitmodules  .travis.yml  Makefile  Makefile.MIDASgrids  Makefile.am  README.md  configure.ac  environment.yml  hash.md5  ignore_this.py  numpypi_series.py  ocean_grid_generator.py  pymidas  setup.cfg  tests.mk
.github/workflows/: basic_test.yml
extras/: Makefile  Makefile.examples  envs.gfdl_pan_py2  envs.gfdl_pan_py3  hash.md5  hash.md5.gfdl-pan  hash.md5.gfdl-pan105  hash.md5.gfdl-ws  hash.md5.gfdl_pan_py2  hash.md5.gfdl_pan_py3  hash.md5.gfdl_ws  hash.md5.githubTravisCI  reproducibility_notes
pymidas/: rectgrid_gen.py  rectgrid_utils.py
scratch_books/: README
t/: Makefile.am  test_funcs.py  test_ocean_grid_gen.py
