[metadata]
name = ocean_model_grid_generator
version = 0.0.1
author = Niki Zadeh
description = Tools for creating finite element spherical tripolar grids
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nikizadehgfdl/ocean_model_grid_generator
project_urls =
    Bug Tracker = https://github.com/nikizadehgfdl/ocean_model_grid_generator/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
scripts = ocean_grid_generator.py
packages = find:
package_dir =
python_required = >=3.6
install_requires=
    netCDF4
    numpypi @ git+https://github.com/underwoo/numpypi@pip.installable

[options.packages.find]
where = .
